# OptSemC

./: .cloudignore  .gitattributes  .gitignore  README.md
artifact/: CITATION.cff  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  constraints.txt  pyproject.toml  recompute_grounded_mainline.sh  requirements.txt  run_cloud_real_engine_validation.sh  run_deep_checks.sh  run_from_scratch_no_cache.sh  run_mainline_checks.sh  setup.py  sitecustomize.py
artifact/baselines/: baseline_catalog.yaml
artifact/benchmark/: feature_domain.yaml  generated_probes.jsonl  selected_3wise.yaml  validity_constraints.yaml
artifact/config/: practice_projection_surfaces.csv
artifact/evaluation/: algorithmic_scaling.csv  algorithmic_scaling_check.csv  algorithmic_scaling_summary.csv  anti_overfit_audit.csv  anti_overfit_audit_check.csv  architecture_contract.csv  architecture_import_graph.csv  artifact_hygiene.csv  artifact_registry.csv  artifact_registry_check.csv  artifact_registry_summary.csv  baseline_portfolio_check.csv  benchmark_compiler_check.csv  benchmark_compiler_summary.csv  benchmark_minimal_probe_cover.csv  benchmark_motif_coverage.csv  benchmark_motif_difficulty.csv  benchmark_motif_difficulty_check.csv  benchmark_motif_difficulty_paper.csv  benchmark_motif_redundancy.csv  certificate_freshness_check.csv  claim_evidence_gate_cover.csv  claim_evidence_graph.csv  claim_evidence_graph_check.csv  claim_evidence_graph_claims.csv  claim_evidence_graph_nodes.csv  claim_evidence_graph_summary.csv  claim_ledger_check.csv  claim_metric_summary.csv  claim_severity.csv  claim_severity_check.csv  cli_smoke_check.csv  codebase_scale_check.csv  core_library_contract.csv  counterfactual_repair_ablation.csv  counterfactual_repair_ablation_check.csv  coverage_interactions.csv  data_contract_cross_file.csv  data_contract_issues.csv  data_contracts.csv  (+221 more)
artifact/grounded/: engine_rule_counts.csv  grounded_source_hashes.csv  source_rule_counts.csv  state_rule_counts.csv  verified_core_summary.csv  verified_rules.jsonl  verified_segments.jsonl  verified_sources.csv
artifact/optsemc/: __init__.py  adversarial.py  algorithmic_scaling.py  architecture.py  baselines.py  benchmark.py  benchmark_compiler.py  certificates.py  claim_graph.py  cli.py  corpus.py  coverage.py  data_contracts.py  differential.py  domain.py  evidence_balance.py  external.py  formal.py  guards.py  incremental.py  information.py  io.py  lattice.py  manifest.py  metamorphic.py  metrics.py  minimization.py  package_builder.py  projections.py  provenance.py  quality.py  registry.py  relations.py  repair.py  repair_stability.py  replay.py  reporting.py  repository.py  scalability.py  schemas.py  (+13 more)
artifact/schema/: action_domain.yaml  contract_rule.schema.json  query_probe.schema.json
artifact/scripts/: audit_grounded_core.py  (+200 more)
(+234 files in other folders)
