[build-system]
requires = ["setuptools==80.9.0", "setuptools-scm==8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "optsemc"
dynamic = ["version"]
description = "OptSem-C: public optimizer-contract semantics, covering probes, projection-surface repair certificates, and reproducibility checks."
requires-python = ">=3.10"
dependencies = ["PyYAML==6.0.3", "tomli>=2.0; python_version<'3.11'"]
readme = "README.md"
license = "MIT"
keywords = ["query optimization", "database systems", "optimizer contracts", "benchmarking", "PVLDB"]

[tool.setuptools]
package-dir = {"optsemc" = "optsemc"}
packages = ["optsemc"]

[tool.setuptools_scm]
root = ".."
relative_to = "pyproject.toml"
fallback_version = "0.0.0"

[project.optional-dependencies]
paper = ["pypdf==6.14.2"]
realengines = ["duckdb==1.5.4", "psycopg[binary]==3.3.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
optsemc = "optsemc.cli:main"
